--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,19 @@
   color: #fff;
 }
 
+::-webkit-scrollbar-thumb {
+  background-color: var(--main-clr);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #eee;
+}
+
 html {
   scroll-behavior: smooth;
 }
